--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.16.0",
     "react-native-svg": "^15.13.0",
-    "react-native-vector-icons": "^10.3.0",
     "react-native-worklets": "^0.5.1",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -43,7 +43,6 @@
     "@react-native/typescript-config": "0.81.4",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
-    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
