--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@react-navigation/stack": "^7.4.8",
+    "@realm/react": "^0.11.0",
     "@reduxjs/toolkit": "^2.9.0",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
@@ -27,6 +28,7 @@
     "react-native-screens": "^4.16.0",
     "react-native-svg": "^15.13.0",
     "react-native-worklets": "^0.5.1",
+    "realm": "^20.1.0",
     "redux": "^5.0.1",
     "socket.io-client": "^4.8.1"
   },
