--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-contacts": "^8.0.7",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-mmkv": "^3.3.3",
     "react-native-reanimated": "^4.1.3",
