--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.81.4",
     "react-native-contacts": "^8.0.7",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-mmkv": "^3.3.3",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.1",
