--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^23.4.1",
+    "@react-native-firebase/messaging": "^23.4.1",
     "@react-native/new-app-screen": "0.81.4",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/drawer": "^7.5.8",
@@ -24,6 +26,7 @@
     "react-native": "0.81.4",
     "react-native-contacts": "^8.0.7",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-mmkv": "^3.3.3",
     "react-native-reanimated": "^4.1.3",
